Handle several bugfixes and implement a new language management system.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ out
 run/
 .cache
 src/documentation/generated/
+src/main/resources/assets/chiselsandbits/lang/*
+!src/main/resources/assets/chiselsandbits/lang/en_us.json
