--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+modId=chiselsandbits
 modGroup=com.ldtteam
 modVersion=1.1.6-RELEASE
 modBaseName=chiselsandbits
+
+javaVersion=16
+useJavaToolChains=true
 
 forgeVersion=37.0.71
 forgeMinVersion=37.0.71
@@ -12,7 +16,33 @@ minecraftVersion=1.17.1
 exactMinecraftVersion=1.17.1
 additionalMinecraftVersions=1.17.1
 
-mcpChannel=official
-mcpVersion=1.17.1
+mappingsChannel=official
+mappingsVersion=1.17.1
+
+extendDefaultSourceSetConfiguration=true
+additionalSourceSets=documentation;datagen
+documentationConfigurationDependencies=minecraft
+documentationSourceSetDependencies=main;api
+datagenConfigurationDependencies=minecraft
+datagenSourceSetDependencies=main;api
+primaryJarSourceSets=api;main
+runtimeSourceSets=api;main;documentation;datagen
+
 jeiVersion=8.1.0.18
 dataGeneratorsVersion=0.1.46-ALPHA
+
+usesOptifine=false
+projectHasApi=true
+primaryJarClassifier=
+isFMLLibrary=false
+
+usesCrowdInTranslationManagement=true
+crowdInProjectId=chisels-and-bits
+crowdInDownloadDirectory=src/main/resources/assets/chiselsandbits/lang
+
+curseId=231095
+
+githubUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits
+gitUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
+gitConnectUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
+projectUrl=https://www.curseforge.com/minecraft/mc-mods/chisels-bits
