Handle several bugfixes and implement a new language management system.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+modId=chiselsandbits
 modGroup=com.ldtteam
 modVersion=1.0.12-RELEASE
 modBaseName=chiselsandbits
+
+javaVersion=8
+useJavaToolChains=false
 
 forgeVersion=36.1.16
 forgeMinVersion=34.1.16
@@ -12,7 +16,33 @@ minecraftVersion=1.16.5
 exactMinecraftVersion=1.16.5
 additionalMinecraftVersions=1.16.2,1.16.3,1.16.4
 
-mcpChannel=official
-mcpVersion=1.16.5
+mappingsChannel=official
+mappingsVersion=1.16.5
+
+extendDefaultSourceSetConfiguration=true
+additionalSourceSets=documentation;datagen
+documentationConfigurationDependencies=minecraft
+documentationSourceSetDependencies=main;api
+datagenConfigurationDependencies=minecraft
+datagenSourceSetDependencies=main;api
+primaryJarSourceSets=api;main
+librarySourceSets=api;main;documentation;datagen
+
 jeiVersion=7.6.1.75
 dataGeneratorsVersion=0.1.46-ALPHA
+
+usesOptifine=false
+projectHasApi=true
+primaryJarClassifier=
+isFMLLibrary=false
+
+usesCrowdInTranslationManagement=true
+crowdInProjectId=chisels-and-bits
+crowdInDownloadDirectory=src/main/resources/assets/chiselsandbits/lang
+
+curseId=231095
+
+githubUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits
+gitUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
+gitConnectUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
+projectUrl=https://www.curseforge.com/minecraft/mc-mods/chisels-bits
