Update to the new OPC and test the translation management.

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,12 +35,15 @@ usesOptifine=false
 projectHasApi=true
 primaryJarClassifier=
 isFMLLibrary=false
+usesDatagen=true
 
 usesCrowdInTranslationManagement=true
 crowdInProjectId=chisels-and-bits
 crowdInDownloadDirectory=src/main/resources/assets/chiselsandbits/lang
 
+useCurse=true
 curseId=231095
+optionalCurseDependencies=jei
 
 githubUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits
 gitUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
