--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,11 @@ librarySourceSets=api;main;documentation;datagen
 jeiVersion=7.6.1.75
 dataGeneratorsVersion=0.1.46-ALPHA
 
+usesMCVersionBasedVersioning=true
+sourceVersionName=1.16
+sourceVersionElementIndex=1
+mcVersionElementIndex=1
+
 usesOptifine=false
 projectHasApi=true
 primaryJarClassifier=
@@ -38,10 +43,11 @@ isFMLLibrary=false
 usesDatagen=true
 
 usesCrowdInTranslationManagement=true
-crowdInProjectId=chisels-and-bits
 crowdInDownloadDirectory=src/main/resources/assets/chiselsandbits/lang
+usesCrowdInBuildingWithFilteredBranches=true
+usesCrowdInUploadWithFilteredBranches=true
 
-useCurse=true
+usesCurse=true
 curseId=231095
 optionalCurseDependencies=jei
 
