--- a/build.gradle
+++ b/build.gradle
@@ -1,2 +1,1 @@
-apply from: 'D:\\Java\\Modding\\OperaPublicaCreator\\gradle\\mod.gradle'
-project.getLogger().lifecycle("Loaded remote build.gradle with version: " + project.modVersion)
+apply from: 'https://raw.githubusercontent.com/ldtteam/OperaPublicaCreator/main/gradle/mod.gradle'
