--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,1 @@
-apply from: 'https://raw.githubusercontent.com/ldtteam/OperaPublicaCreator/main/gradle/mod.gradle'
+apply from: 'D:\\Java\\Modding\\OperaPublicaCreator\\gradle\\mod.gradle'
