--- a/gradle/runs.gradle
+++ b/gradle/runs.gradle
@@ -10,7 +10,15 @@ project.minecraft {
         generateDataSpec.inheritArgs false
         generateDataSpec.args '--all', '--output', file('src/datagen/generated/chiselsandbits'),
                 '--mod', 'chiselsandbits',
-                '--existing', sourceSets.main.resources.srcDirs[0]
+                '--existing', sourceSets.main.resources.srcDirs[0],
+                '--launchTarget', 'forgedatauserdev',
+                '--assetIndex', '1.17',
+                '--assetsDir', tasks.downloadAssets.getOutput().getAbsolutePath(),
+                '--gameDir', '.',
+                '--fml.forgeVersion', '37.0.71',
+                '--fml.mcVersion', '1.17.1',
+                '--fml.forgeGroup', 'net.minecraftforge',
+                '--fml.mcpVersion', '20210706.113038'
         generateDataSpec.mods {
             chiselsandbits {
                 source sourceSets.main
@@ -30,7 +38,15 @@ project.minecraft {
         generateDocumentationSpec.args '--all', '--output', file('src/documentation/generated/chiselsandbits'),
                 '--mod', 'chiselsandbits',
                 '--existing', sourceSets.main.resources.srcDirs[0],
-                '--existing', file('src/datagen/generated/chiselsandbits')
+                '--existing', file('src/datagen/generated/chiselsandbits'),
+                '--launchTarget', 'forgedatauserdev',
+                '--assetIndex', '1.17',
+                '--assetsDir', tasks.downloadAssets.getOutput().getAbsolutePath(),
+                '--gameDir', '.',
+                '--fml.forgeVersion', '37.0.71',
+                '--fml.mcVersion', '1.17.1',
+                '--fml.forgeGroup', 'net.minecraftforge',
+                '--fml.mcpVersion', '20210706.113038'
         generateDocumentationSpec.mods {
             chiselsandbits {
                 source sourceSets.main
