--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ documentationSourceSetDependencies=main;api
 datagenConfigurationDependencies=minecraft
 datagenSourceSetDependencies=main;api
 primaryJarSourceSets=api;main
-runtimeSourceSets=api;main;documentation;datagen
+librarySourceSets=api;main;datagen;documentation
 
 jeiVersion=8.1.0.18
 dataGeneratorsVersion=0.1.46-ALPHA
