--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ forgeMinVersion=34.1.16
 
 minecraftVersion=1.16.5
 exactMinecraftVersion=1.16.5
-additionalMinecraftVersions=1.16.2,1.16.3,1.16.4
+additionalMinecraftVersions=1.16.2;1.16.3;1.16.4
 
 mappingsChannel=official
 mappingsVersion=1.16.5
