Add support for plugins

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ modBaseName=chiselsandbits
 javaVersion=8
 useJavaToolChains=false
 
-forgeVersion=36.1.16
+forgeVersion=36.2.8
 forgeMinVersion=34.1.16
 
 minecraftVersion=1.16.5
@@ -29,6 +29,8 @@ primaryJarSourceSets=api;main
 librarySourceSets=api;main;documentation;datagen
 
 jeiVersion=7.6.1.75
+flyWheelVersion=1.16-0.2.4.50
+createVersion=mc1.16.5_v0.3.2e+441
 dataGeneratorsVersion=0.1.46-ALPHA
 
 usesMCVersionBasedVersioning=true
