--- a/gradle/runs.gradle
+++ b/gradle/runs.gradle
@@ -13,8 +13,8 @@ project.minecraft {
                 '--existing', sourceSets.main.resources.srcDirs[0],
                 '--launchTarget', 'fmluserdevdata',
                 '--gameDir', '.',
-                '--fml.forgeVersion', '36.1.16',
-                '--fml.mcVersion', '1.16.5',
+                '--fml.forgeVersion', project.forgeVersion,
+                '--fml.mcVersion', project.exactMinecraftVersion,
                 '--fml.forgeGroup', 'net.minecraftforge',
                 '--fml.mcpVersion', '20210706.113038'
         generateDataSpec.mods {
@@ -39,8 +39,8 @@ project.minecraft {
                 '--existing', file('src/datagen/generated/chiselsandbits'),
                 '--launchTarget', 'fmluserdevdata',
                 '--gameDir', '.',
-                '--fml.forgeVersion', '36.1.16',
-                '--fml.mcVersion', '1.16.5',
+                '--fml.forgeVersion', project.forgeVersion,
+                '--fml.mcVersion', project.exactMinecraftVersion,
                 '--fml.forgeGroup', 'net.minecraftforge',
                 '--fml.mcpVersion', '20210706.113038'
         generateDocumentationSpec.mods {
