Implement a modular radial menu. Implement a change tracker control widget. Allow leaves to be chiseled. Rework the screens. Remove the old radial tool mode selection screen.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -37,3 +37,8 @@ public net.minecraft.client.renderer.LevelRenderer m_109782_(Lcom/mojang/blaze3d
 
 # Profiler
 public net.minecraft.util.profiling.ActiveProfiler f_18378_ #storage
+
+#Screen classes
+public net.minecraft.client.gui.screens.Screen f_96540_ #children
+public net.minecraft.client.gui.screens.Screen f_169368_ #narratables
+public net.minecraft.client.gui.screens.Screen f_169369_ #renderables
