--- a/Platforms/Forge/build.gradle
+++ b/Platforms/Forge/build.gradle
@@ -79,7 +79,7 @@ minecraft {
             workingDirectory project.file('run')
             ideaModule "${rootProject.name}.${project.name}.main"
             args '--mod', mod_id,
-                    '--output', file("src/generated/resources/"),
+                    '--output', project(":Common").file("src/main/resources"),
                     '--existing', file('src/main/resources/'),
                     '--existing', project(":Common").file('src/main/resources/')
             taskName 'Data'
@@ -108,7 +108,7 @@ minecraft {
     }
 }
 
-sourceSets.main.resources.srcDir 'src/generated/resources'
+sourceSets.main.resources.srcDir project(":Common").file("src/main/resources")
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
@@ -144,6 +144,8 @@ processResources {
     filesMatching ('**/mods.toml') {
         expand project.properties
     }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 jar.finalizedBy('reobfJar')
