--- a/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -33,7 +33,9 @@ public net.minecraft.world.level.chunk.LinearPalette f_63030_ #arraySize
 public net.minecraft.world.level.chunk.PalettedContainer f_63068_ #storage
 
 # LevelChunkSection
-public net.minecraft.world.level.chunk.LevelChunkSection f_62972_ #states
+public-f net.minecraft.world.level.chunk.LevelChunkSection f_62972_ #states
+public net.minecraft.world.level.chunk.PalettedContainer$Data
+public net.minecraft.world.level.chunk.PalettedContainer f_188032_ # data
 
 # WorldRenderer
 public net.minecraft.client.renderer.LevelRenderer m_109782_(Lcom/mojang/blaze3d/vertex/PoseStack;Lcom/mojang/blaze3d/vertex/VertexConsumer;Lnet/minecraft/world/phys/shapes/VoxelShape;DDDFFFF)V #drawShape
