--- a/Platforms/Forge/src/main/resources/META-INF/mods.toml
+++ b/Platforms/Forge/src/main/resources/META-INF/mods.toml
@@ -1,11 +1,13 @@
 modLoader="javafml"
 loaderVersion="[28,)"
 license="GLGPLv3"
+
 [[mods]] #mandatory
 modId="chiselsandbits"
 version="${version}"
 displayName="Chisels & bits"
 authors="OrionOnline, LDTTeam, AlgorithmX2 "
+logoFile="logo.png"
 description='''
 A mod about Sculpting, Decorating and Aesthetics.
 
