--- a/Platforms/Forge/build.gradle
+++ b/Platforms/Forge/build.gradle
@@ -20,6 +20,10 @@ repositories {
         name 'LDTTeam - Modding'
         url 'https://ldtteam.jfrog.io/ldtteam/modding/'
     }
+    maven {
+        name "tterrag maven"
+        url "https://maven.tterrag.com/"
+    }
 }
 
 archivesBaseName = "${mod_name}-forge-${minecraft_version}"
@@ -51,6 +55,8 @@ minecraft {
             taskName 'Client'
             arg "--mixin=chiselsandbits.mixins.json"
             jvmArgs "-Dmixin.debug=true", "-Dmixin.debug.export=true"
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
                 chiselsandbits {
                     source sourceSets.main
@@ -67,6 +73,8 @@ minecraft {
             taskName 'Server'
             arg "--mixin=chiselsandbits.mixins.json"
             jvmArgs "-Dmixin.debug=true", "-Dmixin.debug.export=true"
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
                 chiselsandbits {
                     source sourceSets.main
@@ -80,6 +88,8 @@ minecraft {
         data {
             workingDirectory project.file('run')
             ideaModule "${rootProject.name}.${project.name}.main"
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             args '--mod', mod_id,
                     '--output', project(":Common").file("src/datagen/generated"),
                     '--existing', file('src/main/resources/'),
@@ -124,6 +134,9 @@ dependencies {
 
     compileOnly 'org.jetbrains:annotations:16.0.2'
     testCompileOnly 'org.jetbrains:annotations:16.0.2'
+
+    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${project.flyWheelVersion}")
+    implementation fg.deobf("com.simibubi.create:Create:${project.createVersion}")
 
     forgeLibrary ("com.ldtteam:datagenerators:${project.dataGeneratorsVersion}") {
         transitive = false
