--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ mod_id=chiselsandbits
 # Dependency versions
 jeiVersion=9.1.0.46
 dataGeneratorsVersion=0.1.46-ALPHA
+flyWheelVersion=1.18-0.4.2-rc.25
+createVersion=mc1.18.1_v0.4a+31
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
