--- a/Platforms/Forge/src/main/resources/META-INF/mods.toml
+++ b/Platforms/Forge/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId="chiselsandbits"
 version="${version}"
 displayName="Chisels & bits"
 authors="OrionOnline, LDTTeam, AlgorithmX2 "
-logoFile="logo.png"
+logoFile="logo-forge.png"
 description='''
 A mod about Sculpting, Decorating and Aesthetics.
 
