--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project
-version=1.0.0
+modVersion=1.0.0
 group=mod.chiselsandbits
 
 # Common
@@ -22,6 +22,17 @@ mod_id=chiselsandbits
 # Dependency versions
 jeiVersion=9.1.0.46
 dataGeneratorsVersion=0.1.46-ALPHA
+
+# Versioning schema data.
+sourceVersionName=1.16
+sourceVersionElementIndex=1
+mcVersionElementIndex=1
+
+# Maven data
+githubUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits
+gitUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
+gitConnectUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
+projectUrl=https://www.curseforge.com/minecraft/mc-mods/chisels-bits
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
