Add support for CG to the fabric project.

--- a/Platforms/Fabric/build.gradle
+++ b/Platforms/Fabric/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'idea'
 }
 
+apply plugin: com.matthewprenger.cursegradle.CurseGradlePlugin
+
 archivesBaseName = "${mod_name}-fabric-${minecraft_version}"
 
 repositories {
